Set minion_id in bootstrap_options.
Boxed with a pre-existing hostname seemed to end up with that name and
not the new one set here. This was noticed when using public boxes that
already had a hostname.

--- a/saltnetcfg.yaml
+++ b/saltnetcfg.yaml
@@ -20,6 +20,6 @@ minions:
             ip: 172.16.1.5
             private_net: true
   - name: minion02
-    box: /m/boxes/vagrant-vb/min-centos7.2.box
+    box: ubuntu/xenial64
     ip: 172.16.1.3
     private_net: true
